--- a/lecture1/hello.html
+++ b/lecture1/hello.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <p class="fw-bold">Hello World!</p>
+    <h1 class="display-4">Hello!</h1>
     This is some more text.
 </body>
 </html>
