--- a/lecture1/hello.html
+++ b/lecture1/hello.html
@@ -7,13 +7,18 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <div class="container-lg">
+    <div class="container-lg py-5">
         <div class="row justify-content-center align-items-center">
-            <h1>
-                <div class="display-2">Wriothesley</div>
-                <div class="display-5 text-muted">Emissary of Solitary Iniquity</div>
-            </h1>
-            <img src="wriothelsey.webp" alt="Wriothesley" class="img-fluid">
+            <div class="col-md-7 text-center text-md-start">
+                <h1>
+                    <div class="display-2">Wriothesley</div>
+                    <div class="display-5 text-muted">Emissary of Solitary Iniquity</div>
+                </h1>
+            </div>
+
+            <div class="col-md-5 text-center d-none d-md-block">
+                <img src="wriothelsey.webp" alt="Wriothesley" class="img-fluid">
+            </div>
         </div>
     </div>
     <h1 class="display-4">Hello!</h1>
