--- a/lecture1/hello.html
+++ b/lecture1/hello.html
@@ -16,11 +16,27 @@
                 </h1>
             </div>
 
-            <div class="col-md-5 text-center d-none d-md-block">
+            <div class="col-md-5 text-center d-md-block">
                 <img src="wriothelsey.webp" alt="Wriothesley" class="img-fluid">
             </div>
         </div>
     </div>
+
+    <div class="container-lg py-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-7 text-center text-md-start">
+                <h1>
+                    <div class="display-2">Sigewinne</div>
+                    <div class="display-5 text-muted">Wondrous Dragonheir</div>
+                </h1>
+            </div>
+
+            <div class="col-md-5 text-center d-md-block">
+                <img src="sigewinne.webp" alt="Sigewinne" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
     <h1 class="display-4">Hello!</h1>
     <p class="text-primary fw-bold">Hello World!</p>
     This is some more text.
